# ChangeLog for sys-apps/coreutils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.235 2008/04/29 16:44:55 ranger Exp $

  29 Apr 2008; Brent Baude <ranger@gentoo.org> coreutils-6.10-r2.ebuild:
  stable ppc, bug 218927

  24 Apr 2008; Jeroen Roovers <jer@gentoo.org> coreutils-6.10-r2.ebuild:
  Stable for HPPA (bug #218927).

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> coreutils-6.10-r2.ebuild:
  Stable on ppc64; bug #218927

  24 Apr 2008; <welp@gentoo.org> coreutils-6.10-r2.ebuild:
  Stable on amd64; bug 218927

  24 Apr 2008; Raúl Porcel <armin76@gentoo.org> coreutils-6.10-r2.ebuild:
  alpha/ia64/sparc/x86 stable wrt #218927

*coreutils-6.11 (19 Apr 2008)

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> +coreutils-6.11.ebuild:
  Version bump.

  17 Apr 2008; nixnut <nixnut@gentoo.org> coreutils-6.10-r1.ebuild:
  Stable on ppc wrt bug 217239

  14 Apr 2008; Jeroen Roovers <jer@gentoo.org> coreutils-6.10-r1.ebuild:
  Stable for HPPA (bug #217239).

  14 Apr 2008; Markus Rothe <corsair@gentoo.org> coreutils-6.10-r1.ebuild:
  Stable on ppc64; bug #217239

  14 Apr 2008; Raúl Porcel <armin76@gentoo.org> coreutils-6.10-r1.ebuild:
  alpha/ia64/sparc stable wrt #217239

  13 Apr 2008; Mike Frysinger <vapier@gentoo.org> coreutils-6.10-r1.ebuild,
  coreutils-6.10-r2.ebuild:
  Add support for USE=vanilla.

  13 Apr 2008; Mike Frysinger <vapier@gentoo.org> coreutils-6.10-r1.ebuild,
  coreutils-6.10-r2.ebuild:
  Drop unneeded selinux configure options.

  13 Apr 2008; Mike Frysinger <vapier@gentoo.org> coreutils-6.10-r1.ebuild,
  coreutils-6.10-r2.ebuild:
  Block older versions of util-linux for the lazy who havent updated in a
  while #217482.

  13 Apr 2008; Benedikt Böhm <hollow@gentoo.org> coreutils-6.10-r1.ebuild:
  amd64 stable wrt #217239

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> coreutils-6.10-r1.ebuild:
  Stable on x86 (bug #217239)
